--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Forescout blog app",
-  "name": "Forescout blog app",
+  "short_name": "blog app",
+  "name": "blog app",
   "icons": [
     {
       "src": "favicon.ico",
